Image widget alignment fix for PIRATE-3757.

--- a/css/widgets.less
+++ b/css/widgets.less
@@ -788,9 +788,7 @@
 
 // ======= Widget: Image
 .widget.image {
-	text-align: center;
 	a {
-		display: inline-block;
 		&:hover {
 			text-decoration: none;
 		}
@@ -798,7 +796,6 @@
 	}
 	.image-img {
 		img {
-			display: inline-block;
 			border-bottom: 6px solid @color-swatch2;
 			&.widget-align-left {
 				border-bottom: none;
